# sap-ontology

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
context/: sap-ontology-context.jsonld
docs/: classes.md  generate_overview_pptx.py  overview.md  relations.md  sap-ontology-overview.pptx  using-the-ontology.md
examples/architecture/: application-component-sd.jsonld  dataobject-customer-master.jsonld  integration-sd-fi.jsonld  tech-hana.jsonld
examples/implementation/: change-chf-rollout.jsonld  config-pricing-procedure.jsonld  incident-gi-plant1000.jsonld  requirement-chf-support.jsonld  testcase-chf-invoice.jsonld  transport-chf-01.jsonld
examples/organization/: capability-credit-management.jsonld  orgunit-sales-org-us01.jsonld  role-credit-manager.jsonld
examples/process/: activity-confirm-order.jsonld  activity-credit-check.jsonld  decision-credit-pass.jsonld  (+4 more)
schema/: architecture.jsonld  implementation.jsonld  organization.jsonld  process.jsonld  provenance.jsonld  relations.jsonld  scenario.jsonld
shapes/: architecture.shacl.ttl  base.shacl.ttl  implementation.shacl.ttl  organization.shacl.ttl  process.shacl.ttl  provenance.shacl.ttl  relations.shacl.ttl  scenario.shacl.ttl
tests/: conftest.py  test_architecture.py  test_base_shape.py  test_context.py  test_example_conformance.py  test_harness_sanity.py  test_implementation.py  test_organization.py  test_process.py  test_provenance.py  test_relations_registered.py  test_round_trip.py  test_scenario.py  test_schema_consistency.py
vocab/: index.html
(+3 files in other folders)
